#https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "space"

#https://microsoft.github.io/pyright/#/configuration?id=sample-pyprojecttoml-file
[tool.pyright]
exclude = [
  "**/__pycache__",
]
extraPaths = [
  "gector"
]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportOptionalMemberAccess = false
reportFunctionMemberAccess = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportArgumentType = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
